argocd/infra/traefik-dashboard/middleware-auth-errors.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: traefik-dashboard-auth-errors
  namespace: kube-system
spec:
  errors:
    status:
      - "401-403"
    service:
      name: traefik-oauth2-proxy
      port: 4180
    query: "/oauth2/sign_in?rd={url}"
