argocd/infra/traefik-dashboard/middleware-ipallowlist.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: traefik-dashboard-ipallowlist
  namespace: kube-system
spec:
  ipAllowList:
    sourceRange:
      - 192.168.1.0/24
      - 10.42.0.0/16
      - 10.43.0.0/16
      - 127.0.0.1/32
