argocd/infra/traefik-dashboard/traefik-dashboard-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-dashboard-api
  namespace: kube-system
spec:
  selector:
    app.kubernetes.io/instance: traefik-kube-system
    app.kubernetes.io/name: traefik
  ports:
    - name: traefik
      port: 8080
      targetPort: traefik
