argocd/infra/traefik-dashboard/ingressroute-dashboard.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: kube-system
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: PathPrefix(`/api`) || PathPrefix(`/dashboard`)
      services:
        - kind: TraefikService
          name: api@internal
